--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
                 <i class="fa-solid fa-ellipsis fa-2xl"></i>
             </div>-->
             <div class="iform">
-                <p><i class="fa-solid fa-user"></i><a href="https://www.linkedin.com/in/pedro-nicolas-vieira-649963201/" target="_blank"> 
-                    Front End Dev</a></p>
-                <p><i class="fa-solid fa-location-dot"></i> 
-                    <a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TdIt7AwTDFg9OIpTi0qObw4vyozLyMfAGH8CL0&q=sert%C3%A3ozinho&rlz=1C1GCEU_pt-PTBR1111BR1111&oq=sertao&gs_lcrp=EgZjaHJvbWUqBwgBEC4YgAQyBggAEEUYOTIHCAEQLhiABDIHCAIQABiABDIGCAMQABgDMgcIBBAAGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMjEzOGowajeoAgCwAgA&sourceid=chrome&ie=UTF-8" target="_blank">
-                        Sertãozinho, SP</a></p>
+                <p><i class="fa-solid fa-user"></i><a href="https://www.linkedin.com/in/pedro-nicolas-vieira-649963201/"
+                        target="_blank">
+                        Front End Dev</a></p>
+                <p><i class="fa-solid fa-location-dot"></i>
+                    <a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TdIt7AwTDFg9OIpTi0qObw4vyozLyMfAGH8CL0&q=sert%C3%A3ozinho&rlz=1C1GCEU_pt-PTBR1111BR1111&oq=sertao&gs_lcrp=EgZjaHJvbWUqBwgBEC4YgAQyBggAEEUYOTIHCAEQLhiABDIHCAIQABiABDIGCAMQABgDMgcIBBAAGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMjEzOGowajeoAgCwAgA&sourceid=chrome&ie=UTF-8"
+                        target="_blank">
+                        Sertãozinho, SP</a>
+                </p>
                 <p><i class="fa-solid fa-phone"></i><a href="tel:(16) 9 9779-0210"> (16) 99779-0210</a></p>
-                <p><i class="fa-solid fa-envelope"></i><a href="mailto:pedronicolas576@gmail.com"> pedronicolas576@gmail.com</a></p>
+                <p><i class="fa-solid fa-envelope"></i><a href="mailto:pedronicolas576@gmail.com">
+                        pedronicolas576@gmail.com</a></p>
             </div>
         </header>
         <section class="acordeon">
@@ -63,30 +67,30 @@
                 <div class="skills">
                     <section class="hard">
                         <h3>Habilidades profissionais:</h3>
-                            <ul>
-                                <li><i class="fa-brands fa-html5"></i></li>
-                                <li><i class="fa-brands fa-css3-alt"></i></li>
-                                <li><i class="fa-brands fa-js"></i></li>
-                                <li><i class="fa-brands fa-angular"></i></li>
-                                <li><i class="fa-brands fa-react"></i></li>
-                                <li><i class="fa-brands fa-git-alt"></i></li>
-                                <li><i class="fa-brands fa-github"></i></li>                            
-                                <li><i class="fa-brands fa-python"></i></li>
-                            </ul>
+                        <ul>
+                            <li><i class="fa-brands fa-html5"></i></li>
+                            <li><i class="fa-brands fa-css3-alt"></i></li>
+                            <li><i class="fa-brands fa-js"></i></li>
+                            <li><i class="fa-brands fa-angular"></i></li>
+                            <li><i class="fa-brands fa-react"></i></li>
+                            <li><i class="fa-brands fa-git-alt"></i></li>
+                            <li><i class="fa-brands fa-github"></i></li>
+                            <li><i class="fa-brands fa-python"></i></li>
+                        </ul>
                     </section>
                     <section class="soft">
                         <h3>Habilidades pessoais:</h3>
-                            <ul>
-                                <li>Flexibilidade</li>
-                                <li>Organizado</li>
-                                <li>Criativo</li>
-                                <li>Comunicação</li>
-                                <li>Trabalho em equipe</li>
-                                <li>Empatia</li>
-                                <li>Resolução de problemas</li>
-                                <li>Aprendizado contínuo</li>
-                            </ul>
-                        </section>
+                        <ul>
+                            <li>Flexibilidade</li>
+                            <li>Organizado</li>
+                            <li>Criativo</li>
+                            <li>Comunicação</li>
+                            <li>Trabalho em equipe</li>
+                            <li>Empatia</li>
+                            <li>Resolução de problemas</li>
+                            <li>Aprendizado contínuo</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
         </section>
@@ -115,27 +119,33 @@
                 <ul class="projetos">
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> Tic Tac Toe</span>
-                        <a href="https://github.com/VieiraPedroN/Tic-Tac-Toe" target="_blank">https://github.com/VieiraPedroN/Tic-Tac-Toe</a>
+                        <a href="https://github.com/VieiraPedroN/Tic-Tac-Toe"
+                            target="_blank">https://github.com/VieiraPedroN/Tic-Tac-Toe</a>
                     </li>
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> Pedido de namoro</span>
-                        <a href="https://github.com/VieiraPedroN/Pedido-de-namoro" target="_blank">https://github.com/VieiraPedroN/Pedido-de-namoro</a>
+                        <a href="https://github.com/VieiraPedroN/Pedido-de-namoro"
+                            target="_blank">https://github.com/VieiraPedroN/Pedido-de-namoro</a>
                     </li>
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> Flores</span>
-                        <a href="https://github.com/VieiraPedroN/Flower.github.io" target="_blank">https://github.com/VieiraPedroN/Flower.github.io</a>
+                        <a href="https://github.com/VieiraPedroN/Flower.github.io"
+                            target="_blank">https://github.com/VieiraPedroN/Flower.github.io</a>
                     </li>
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> Pokedex</span>
-                        <a href="https://github.com/VieiraPedroN/Pokedex_DIO" target="_blank">https://github.com/VieiraPedroN/Pokedex_DIO</a>
+                        <a href="https://github.com/VieiraPedroN/Pokedex_DIO"
+                            target="_blank">https://github.com/VieiraPedroN/Pokedex_DIO</a>
                     </li>
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> CoinVersor</span>
-                        <a href="https://github.com/VieiraPedroN/CoinVersor" target="_blank">https://github.com/VieiraPedroN/CoinVersor</a>
+                        <a href="https://github.com/VieiraPedroN/CoinVersor"
+                            target="_blank">https://github.com/VieiraPedroN/CoinVersor</a>
                     </li>
                     <li>
                         <span class="title"><i class="fa-brands fa-github"></i> Tasks</span>
-                        <a href="https://github.com/VieiraPedroN/Tasks" target="_blank">https://github.com/VieiraPedroN/Tasks</a>
+                        <a href="https://github.com/VieiraPedroN/Tasks"
+                            target="_blank">https://github.com/VieiraPedroN/Tasks</a>
                     </li>
                 </ul>
             </div>
@@ -149,18 +159,22 @@
             <div class="content">
                 <ul class="exp">
                     <li>
-                        <span class="title">Técnico em manutenção em equipamentos de informática // Étika à Tecnologia da Informação</span>
+                        <span class="title">Técnico em manutenção em equipamentos de informática // Étika à Tecnologia
+                            da Informação</span>
                         <p><i class="fa-solid fa-location-dot"></i> Sertãozinho, SP</p>
                         <p><i class="fa-solid fa-calendar"></i>01/2024 - 02/2024</p>
-                        <p> Exercendo serviços de T.I como suporte a software, rede, hardware e configuração de computadores.
-                            </p>
+                        <p> Exercendo serviços de T.I como suporte a software, rede, hardware e configuração de
+                            computadores.
+                        </p>
                     </li>
                     <li>
-                        <span class="title">Analista de suporte computacional // Global Distribuição de Bens de Consumo LTDA (iPlace)</span>
+                        <span class="title">Analista de suporte computacional // Global Distribuição de Bens de Consumo
+                            LTDA (iPlace)</span>
                         <p><i class="fa-solid fa-location-dot"></i> Ribeirão Preto, SP</p>
                         <p><i class="fa-solid fa-calendar"></i>06/2023 - 04/2024</p>
                         <p> Especializado e autorizado para assistência em equipamentos
-                            Apple. Exercendo serviços de T.I como suporte a software, hardware manutenção de equipamentos e assistência técnica.</p>
+                            Apple. Exercendo serviços de T.I como suporte a software, hardware manutenção de
+                            equipamentos e assistência técnica.</p>
                     </li>
                 </ul>
             </div>
