--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <main class="main">
         <header class="header">
-            <img src="/assets/img/IMG-20240726-WA0106 (1).jpg" alt="Foto Pedro Vieira" class="profile">
+            <img src="/assets/img/foto-profile.png" alt="Foto Pedro Vieira" class="profile">
 
             <h1 class="title">Olá,<br> eu sou o <br>Pedro Vieira</h1>
             <!--<div class="point">
