--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <main class="main">
         <header class="header">
             <img src="/assets/img/foto-profile.png" alt="Foto Pedro Vieira" class="profile">
